Fixed tabs overlap issue

--- a/in-RRchives-homepage.css
+++ b/in-RRchives-homepage.css
@@ -15,9 +15,16 @@
 }
 
 .theme-red {
-    background-color: rgba(73,0,0);
+  background-color: rgba(73,0,0);
 }
-.main-nav-tab-1 { 
+
+.main-navigation-wrapper {
+  display: flex;
+  gap: 2px;
+  align-items: flex-end;
+}
+
+.main-nav-body { 
   width: 95vw;
   height: 13vh;
   margin: 5rem auto;
@@ -39,6 +46,7 @@
     clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
     border: 1px solid black;
     border-bottom: none;
+    z-index: 4;
 }
 
 .main-nav-tab-1::after {
@@ -48,8 +56,6 @@
   width: 85px;
   height: 7px;
   top: -18px;
-  background: black;
-  border-radius: 0 0 5px 5px;
 }
 
 .main-nav-tab-2::before {
@@ -59,23 +65,23 @@
     width: 160px;
     height: 17px;
     left: 130px;
-    background: rgba(128,128,128,0.1); 
+    background: rgb(200,200,200, 0.3);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     border-radius: 25px 25px 0 0;
     clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
     border: 1px solid black;
     border-bottom: none;
-    z-index:-1; 
+    z-index: 3;
 }
 
 .main-nav-tab-2::after {
   content: '';
   position: absolute;
-  left: 170px;
+  left: 165px;
   width: 85px;
   height: 7px;
   top: -18px;
-  background: black;
-  border-radius: 0 0 5px 5px;
 }
 
 .main-nav-tab-3::before {
@@ -84,22 +90,47 @@
     top: -18px;
     width: 160px;
     height: 17px;
-    left: 130px;
-    background: rgba(128,128,128,0.7); 
+    left: 260px;
+    background: rgb(200,200,200,0.3);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px); 
     border-radius: 25px 25px 0 0;
     clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
     border: 1px solid black;
     border-bottom: none;
-    z-index:-1; 
+    z-index: 2;
 }
 
 .main-nav-tab-3::after {
   content: '';
   position: absolute;
-  left: 170px;
+  left: 295px;
   width: 85px;
   height: 7px;
   top: -18px;
-  background: black;
-  border-radius: 0 0 5px 5px;
+}
+
+.main-nav-tab-4::before {
+    content:  '';
+    position: absolute;
+    top: -18px;
+    width: 160px;
+    height: 17px;
+    left: 390px;
+    background: rgb(200,200,200, 0.3);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px); 
+    border-radius: 25px 25px 0 0;
+    clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z');
+    border: 1px solid black;
+    border-bottom: none;
+}
+
+.main-nav-tab-4::after {
+  content: '';
+  position: absolute;
+  left: 427px;
+  width: 85px;
+  height: 7px;
+  top: -18px;
 }
